[package]
name = "xmr_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
minreq = { version = "2.11.0", features = ["https-rustls"] }
serde_json = "1.0.114"
